--- a/ui/mainUI.ui
+++ b/ui/mainUI.ui
@@ -379,7 +379,7 @@ QCheckBox {
      </widget>
     </item>
     <item>
-     <widget class="QFrame" name="export_frame">
+     <widget class="QFrame" name="create_document_frame">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -409,7 +409,7 @@ QCheckBox {
         <number>16</number>
        </property>
        <item>
-        <widget class="QPushButton" name="export_pushButton">
+        <widget class="QPushButton" name="create_document_pushButton">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -456,7 +456,7 @@ QPushButton:disabled {
 }</string>
          </property>
          <property name="text">
-          <string>Экспортировать</string>
+          <string>Создать документ</string>
          </property>
         </widget>
        </item>
