--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="/icons">
     <file>icon.ico</file>
     <file>arrow_down.svg</file>
+    <file>checkbox_check.svg</file>
   </qresource>
 </RCC>
